--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   RabbitMQ:
-    image: rabbitmq:3-management
+    image: rabbitmq:3-core
     ports:
       - "5672:5672"
       - "15672:15672"
