--- a/cmd/node/tasks/task2_start.yaml
+++ b/cmd/node/tasks/task2_start.yaml
@@ -1,9 +1,16 @@
 instructions:
   - type: start_worker
     args:
+      worker_uuid: "33333333-3333-3333-3333-333333333333"
+      worker_raw_config:
+        input_mailbox_uuid: "33333333-3333-3333-3333-333333333333"
+        input_mailbox_buffer: 1000
+
+  - type: start_worker
+    args:
       worker_uuid: "22222222-2222-2222-2222-222222222222"
       worker_raw_config:
-        input_mailbox_uuid: "11111111-1111-1111-1111-111111111111"
+        input_mailbox_uuid: "22222222-2222-2222-2222-222222222222"
         input_mailbox_buffer: 1000
         input_output_mapping:
           "binance_spot_bookticker":
@@ -17,14 +24,8 @@ instructions:
       worker_raw_config:
         base_url: "stream.binance.com:9443"
         streams_output_mapping:
-          "solusdt@bookTicker":
+          "btcusdt@bookTicker":
             mailbox_uuid: "22222222-2222-2222-2222-222222222222"
             tag: "binance_spot_bookticker"
         blocking_send: false
 
-  - type: start_worker
-    args:
-      worker_uuid: "33333333-3333-3333-3333-333333333333"
-      worker_raw_config:
-        input_mailbox_uuid: "22222222-2222-2222-2222-222222222222"
-        input_mailbox_buffer: 1000
