--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -6,3 +6,4 @@ enabled = true
 
   [analyzers.meta]
   import_root = "github.com/PhillipMichelsen/Tessera"
+  import_paths = ["github.com/PhillipMichelsen/Tessera"]
