--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "internal/protos/mexc"]
-	path = internal/protos/mexc
+[submodule "pkg/protos/mexc"]
+	path = pkg/protos/mexc
 	url = https://github.com/mexcdevelop/websocket-proto
