--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pkg/protos/mexc"]
 	path = pkg/protos/mexc
-	url = https://github.com/mexcdevelop/websocket-proto
+	url = https://github.com/mexcdevelop/websocket-proto.git
